Align contact icons with form and fix text-area to be required

--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -1,9 +1,15 @@
 @import 'colors';
 section.contact {
-  .logo {
-    font-size: 5em;
-    display: inline-block;
-    text-align: center;
+  display: flex;
+  justify-content: center;
+  .logos {
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: -10px;
+    .logo {
+      font-size: 4.6em;
+      text-align: center;
+    }
   }
   
   i {
@@ -12,8 +18,6 @@ section.contact {
 
   form {
     width: 50%;
-    margin-left: auto;
-    margin-right: auto;
     min-width: 300px;
 
     * { box-sizing:border-box; }
